<resources>
    <string name="app_name">Calculator</string>

    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>

    <string name="symbol_unary_minus">+/-</string>
    <string name="symbol_point">.</string>
    <string name="symbol_equally">=</string>
    <string name="symbol_bracket_close">)</string>
    <string name="symbol_bracket_open">(</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_division">/</string>
    <string name="symbol_multiplication">x</string>
    <string name="symbol_multiplication2">*</string>

    <string name="delete">DEL</string>
    <string name="ac">AC</string>

    <string name="error_start_or_end">Write error: Extra character at the beginning or at the end.</string>
    <string name="error_tokens">Write error: Multiple incompatible character next.</string>
    <string name="error_brackets">Write error: There are not enough brackets or their order is disturbed.</string>
    <string name="arithmetic_error">Write error: Arithmetic error.</string>
</resources>
